--- a/app/public/landing.jade
+++ b/app/public/landing.jade
@@ -2,10 +2,10 @@ doctype html
 html(lang="en")
 head
     meta(charset='utf-8')
-    title GraphDocs
+    title Cograph
     link(href='/assets/libs/bootstrap/dist/css/bootstrap.min.css', rel='stylesheet')
     link(href='/assets/stylesheets/landing.css', rel='stylesheet')
-    script(type='text/javascript', data-main="landing", src="/assets/libs/requirejs/require.js") //loads landing.js
+    script(type='text/javascript', data-main="landing", src="/assets/libs/requirejs/require.js")
     script.
         window.prefetch =!{JSON.stringify(docs)};
     base(href="/")
