--- a/app/public/header.jade
+++ b/app/public/header.jade
@@ -7,38 +7,64 @@ nav.navbar.navbar-default(role='navigation')
             span.icon-bar
             span.icon-bar
             span.icon-bar
-          a.navbar-brand(href='http://graphdocs.com') GraphDocs
+          a.navbar-brand(href='http://thecograph.com')
+            img#brand-logo(src="assets/images/logo.svg")
           form.navbar-form.navbar-left.main-nav
             .form-group
               input#menu-title(type="text" placeholder="Untitled Doc" data-toggle="tooltip" data-placement="bottom" title="Rename Doc")
         // Collect the nav links, forms, and other content for toggling
         #gdocs-nav.collapse.navbar-collapse
-          ul.nav.navbar-nav
+          ul.nav.navbar-nav.navbar-right
             li
-              a#new-doc-button(href="" data-toggle="modal" data-target="#new-doc-modal") New
-            li.dropdown
-              a.dropdown-toggle(data-toggle='dropdown', href='')
-                if isAuthenticated
-                  | My Cographs
-                else
-                  | Explore Cographs
-                span.caret
-              ul.dropdown-menu
-                li(role="presentation")
-                  a#open-doc-button(href="") Open Cograph
-                li(role="presentation")
-                  a#workspaces-button(href="", data-toggle="modal", data-target="#workspaces-modal") Open Workspace
-            li
-              a#filter-modal-toggle(href="" data-toggle="modal" data-target="#filters_template") Filter
-            li
-              a#analytics-button(href="" data-toggle="modal" data-target="#analytics-modal") Analytics
+              a#new-doc-button(href="" data-toggle="modal" data-target="#new-doc-modal") New Cograph
             if isAuthenticated
               li
                 a.public-button Make GraphDoc public
+              li.dropdown
+                a.dropdown-toggle(data-toggle='dropdown', href='')
+                  | #{user.local.email.split('@')[0]}
+                ul.dropdown-menu
+                  li(role="presentation")
+                    a#open-doc-button(href="") Open Cograph
+                  li(role="presentation")
+                    a#workspaces-button(href="", data-toggle="modal", data-target="#workspaces-modal") Open View
+                  li(role="presentation")
+                    a#save-workspace-button Save View
+                  li(role="presentation")
+                    a#sharing-button Share View
               li
-                a(href="/profile") #{user.local.email.split('@')[0]}'s Profile
+                a(href="/profile") 
               li
                 a(href="/logout") Logout
             else
               li
                 a(href="/login") Login
+          ul.nav.navbar-nav
+            li.dropdown
+              a.dropdown-toggle(data-toggle='dropdown', href='')
+                | View
+                span.caret
+              if isAuthenticated
+                ul.dropdown-menu
+                  li(role="presentation")
+                    a#open-doc-button(href="") Open Cograph
+                  li(role="presentation")
+                    a#workspaces-button(href="", data-toggle="modal", data-target="#workspaces-modal") Open View
+                  li(role="presentation")
+                    a#save-workspace-button Save View
+                  li(role="presentation")
+                    a#sharing-button Share View
+              else
+                ul.dropdown-menu
+                  li(role="presentation")
+                    a#open-doc-button(href="") Open Cograph
+                  li(role="presentation")
+                    a#workspaces-button(href="", data-toggle="modal", data-target="#workspaces-modal") Open View
+              
+            li
+              a#filter-modal-toggle(href="" data-toggle="modal" data-target="#filters_template")
+                i.fa.fa-filter
+            //- Analytics can go on the profile somewhere
+            //- li
+            //-   a#analytics-button(href="" data-toggle="modal" data-target="#analytics-modal") Analytics
+            
