--- a/app/templates/details_box.html
+++ b/app/templates/details_box.html
@@ -3,7 +3,7 @@
     <div class="panel-heading">
       <h4 class="panel-title">
         <a data-toggle="collapse" data-parent="#details-container" href="#collapse-one">
-          <%= node.attributes.name %>
+          Edit
         </a>
         <div class="pull-right uptwo">
           <button type="button" class="close" aria-hidden="true">
