--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -343,14 +343,32 @@ input[type="text"]:-ms-input-placeholder { /* Internet Explorer 10+ */
   border: 0;
 }
 
+.navbar-doc-title {
+    position: absolute;
+    width: 100%;
+    left: 0;
+    top: 8px;
+    text-align: center;
+    margin: auto;
+}
+
+.clickable {
+  cursor: pointer;
+}
+
 #zoom-in-button, #zoom-out-button {
   padding: 5px;
+}
+
+.navbar-doc-title .public-button i {
+  width: 15px;
 }
 
 #menu-title {
   position: relative;
   outline: none;
-  background: rgba(0,0,0,0.02);
+  margin: 0 10px;
+  background: transparent;
   color: black;
   border: 0;
   cursor: pointer;
@@ -402,13 +420,13 @@ input[type="text"]:-ms-input-placeholder { /* Internet Explorer 10+ */
 }
 
 .btn-primary {
-  background: darken(#284552,10%);
-  border: 1px solid darken(#284552,10%);
+  background: lighten(#284552,10%);
+  border: 1px solid lighten(#284552,10%);
 }
 
 .btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active, .open .dropdown-toggle.btn-primary {
-  border: 1px solid darken(#284552,12%);
-  background: darken(#284552,12%);;
+  border: 1px solid lighten(#284552,12%);
+  background: lighten(#284552,12%);;
   color: white;
 }
 
@@ -654,7 +672,9 @@ body {
 
 .caret {
   margin-left: 5px;
+  border-width: 8px;
 }
+
 
 .double-bounce2 {
   -webkit-animation-delay: -1.0s;
