--- a/app/public/header.jade
+++ b/app/public/header.jade
@@ -1,6 +1,5 @@
 nav.navbar.navbar-default(role='navigation')
     .container-fluid
-        // Brand, toggle and title get grouped for better mobile display
         .navbar-header
           button.navbar-toggle(type='button' data-toggle='collapse' data-target='#gdocs-nav')
             span.sr-only Toggle navigation
@@ -9,61 +8,75 @@ nav.navbar.navbar-default(role='navigation')
             span.icon-bar
           a.navbar-brand(href='http://thecograph.com')
             img#brand-logo(src="assets/images/logo.svg")
-          form.navbar-form.navbar-left.main-nav
+          
+        span.navbar-doc-title
             .form-group
+              a.public-button.clickable(title="who can see this graph")
               input#menu-title(type="text" placeholder="Untitled Doc" data-toggle="tooltip" data-placement="bottom" title="Rename Doc")
-        // Collect the nav links, forms, and other content for toggling
+              span.dropdown
+                a.dropdown-toggle(data-toggle='dropdown', href='')
+                  i.caret
+                  //- if owns else other stuff
+                ul.dropdown-menu
+                  li(role="presentation")
+                    a#workspaces-button(href="", data-toggle="modal", data-target="#workspaces-modal") Open View
+                  li(role="presentation")
+                    a#save-workspace-button Save View
+                  li(role="presentation")
+                    a#sharing-button Share View
+                  li
+                    a#analytics-button(href="" data-toggle="modal" data-target="#analytics-modal") Stats
+                  
+
         #gdocs-nav.collapse.navbar-collapse
           ul.nav.navbar-nav.navbar-right
             li
-              a#new-doc-button(href="" data-toggle="modal" data-target="#new-doc-modal") New Cograph
+              a#new-doc-button(href="" data-toggle="modal" data-target="#new-doc-modal")
+                i.fa.fa-edit
             if isAuthenticated
-              li
-                a.public-button Make GraphDoc public
               li.dropdown
                 a.dropdown-toggle(data-toggle='dropdown', href='')
                   | #{user.local.email.split('@')[0]}
+                  i.caret
                 ul.dropdown-menu
                   li(role="presentation")
-                    a#open-doc-button(href="") Open Cograph
+                    a(href="/") Discover
                   li(role="presentation")
-                    a#workspaces-button(href="", data-toggle="modal", data-target="#workspaces-modal") Open View
+                    a(href="/graphs") My Cographs
                   li(role="presentation")
-                    a#save-workspace-button Save View
+                    a(href="/#{user.local.username}") Profile
                   li(role="presentation")
-                    a#sharing-button Share View
-              li
-                a(href="/profile") 
-              li
-                a(href="/logout") Logout
+                    a(href="/account") Account
+                  li
+                    a(href="/logout") Logout
             else
               li
                 a(href="/login") Login
-          ul.nav.navbar-nav
-            li.dropdown
-              a.dropdown-toggle(data-toggle='dropdown', href='')
-                | View
-                span.caret
-              if isAuthenticated
-                ul.dropdown-menu
-                  li(role="presentation")
-                    a#open-doc-button(href="") Open Cograph
-                  li(role="presentation")
-                    a#workspaces-button(href="", data-toggle="modal", data-target="#workspaces-modal") Open View
-                  li(role="presentation")
-                    a#save-workspace-button Save View
-                  li(role="presentation")
-                    a#sharing-button Share View
-              else
-                ul.dropdown-menu
-                  li(role="presentation")
-                    a#open-doc-button(href="") Open Cograph
-                  li(role="presentation")
-                    a#workspaces-button(href="", data-toggle="modal", data-target="#workspaces-modal") Open View
+          //- ul.nav.navbar-nav
+            
+          //-   li.dropdown
+          //-     a.dropdown-toggle(data-toggle='dropdown', href='')
+          //-       | View
+          //-       span.caret
+          //-     if isAuthenticated
+          //-       ul.dropdown-menu
+          //-         li(role="presentation")
+          //-           a#workspaces-button(href="", data-toggle="modal", data-target="#workspaces-modal") Open View
+          //-         li(role="presentation")
+          //-           a#save-workspace-button Save View
+          //-         li(role="presentation")
+          //-           a#sharing-button Share View
+          //-     else
+          //-       ul.dropdown-menu
+          //-         li(role="presentation")
+          //-           a#open-doc-button(href="") Open Cograph
+          //-         li(role="presentation")
+          //-           a#workspaces-button(href="", data-toggle="modal", data-target="#workspaces-modal") Open View
               
-            li
-              a#filter-modal-toggle(href="" data-toggle="modal" data-target="#filters_template")
-                i.fa.fa-filter
+          //-   li
+          //-     a#filter-modal-toggle(href="" data-toggle="modal" data-target="#filters_template")
+          //-       i.fa.fa-filter(title="filter")
+            
             //- Analytics can go on the profile somewhere
             //- li
             //-   a#analytics-button(href="" data-toggle="modal" data-target="#analytics-modal") Analytics
