--- a/app/public/index.jade
+++ b/app/public/index.jade
@@ -31,8 +31,11 @@ block content
                 button#add-submit(title='Create something')
                   | Done
 
-    .toolbar.bottom.right.controls
+    .toolbar.bottom.right.controls#toolbar-bottom-right
       ul.nav.navbar-nav
+        li
+          a#filter-modal-toggle(href="" data-toggle="modal" data-target="#filters_template")
+            i.fa.fa-filter(title="filter")
         li
           form#search-form.form-inline
             .input-group
