--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -515,12 +515,12 @@ body {
 }
 
 #add {
-    font-size: 15pt;
-    width: 420px;
-    border: 1px solid #eee;
-    box-sizing: border-box;
-    background: white;
-    padding: 10px 15px;  
+  font-size: 15pt;
+  width: 420px;
+  border: 1px solid rgba(0,0,0,0.1);
+  box-sizing: border-box;
+  background: rgb(250,250,250);
+  padding: 10px 15px 5px 15px;  
 }
 
 .add-color-item {
@@ -586,10 +586,9 @@ body {
   border: 0;
   background: #eee;
   padding: 8px 17px;
-  border-radius: 3px;
   font-weight: 400;
+  border: 1px solid rgba(0,0,0,0.1);
   color: #777;
-  margin: 0 10px;
   cursor: pointer;
   outline: none;
   font-size: 10pt;
@@ -675,6 +674,9 @@ body {
   border-width: 8px;
 }
 
+.go-right {
+  float: right;
+}
 
 .double-bounce2 {
   -webkit-animation-delay: -1.0s;
