--- a/app/public/signup.jade
+++ b/app/public/signup.jade
@@ -27,6 +27,11 @@ html
           button.btn.btn-warning.btn-lg(type='submit') Signup
         hr
         p
+          a(href="/auth/facebook")
+            | Login with Facebook
+          a(href="/auth/twitter">)
+            | Sign in with Twitter
+        p
           | Already have an account? 
           a(href='/login') Login
         p
