--- a/app/public/signup.jade
+++ b/app/public/signup.jade
@@ -29,7 +29,7 @@ html
         p
           a(href="/auth/facebook")
             | Login with Facebook
-          a(href="/auth/twitter">)
+          a(href="/auth/twitter")
             | Sign in with Twitter
         p
           | Already have an account? 
