--- a/app/public/profileheader.jade
+++ b/app/public/profileheader.jade
@@ -6,33 +6,26 @@ nav.navbar.navbar-default(role='navigation')
             span.icon-bar
             span.icon-bar
             span.icon-bar
-          a.navbar-brand(href='http://thecograph.com')
+          a.navbar-brand(href='/')
             img#brand-logo(src="assets/images/logo.svg")
           
         #gdocs-nav.collapse.navbar-collapse
           ul.nav.navbar-nav.navbar-right
+            li
+              a#new-doc-button(href="" data-toggle="modal" data-target="#new-doc-modal")
+                i.fa.fa-edit
             li.dropdown
               a.dropdown-toggle(data-toggle='dropdown', href='')
                 | #{user.local.email.split('@')[0]}
                 i.caret
               ul.dropdown-menu
+                li
+                  a My Cographs
                 li(role="presentation")
-                  a(href="") Profile
+                  a(href="/#{user.local.username}") Profile
                 li(role="presentation")
-                  a(href="") Account
+                  a(href="/account") Account
                 li
                   a(href="/logout") Logout
             li
               a(href="/profile") 
-
-          ul.nav.navbar-nav   
-            li
-              a Discover
-            li
-              a My Cographs
-            li
-              a(href="/new") New Cograph
-            //- Analytics can go on the profile somewhere
-            //- li
-            //-   a#analytics-button(href="" data-toggle="modal" data-target="#analytics-modal") Analytics
-            
