number of nodes hidden as a number

--- a/app/public/index.jade
+++ b/app/public/index.jade
@@ -48,4 +48,5 @@ block content
               i.glyphicon.glyphicon-minus
     #trash-bin.controls(title="Drag a node here to Archive it")
       i.fa.fa-eye-slash
+      span#number-hidden 0
   .data-tooltip-container
