number of nodes hidden as a number

--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -233,7 +233,15 @@ input[type="text"]:-ms-input-placeholder { /* Internet Explorer 10+ */
   text-align: center;
   border: 4px dashed lightgray;
   border-radius: 0px;
+
+
+  #number-hidden {
+    font-size: 20px;
+    margin-left: 5px;
+    vertical-align: middle;
+  }
 }
+
 
 #trash-bin.selected {
   border-color:@selected-color;
