--- a/app/public/index.jade
+++ b/app/public/index.jade
@@ -47,6 +47,7 @@ block content
             button#zoom-out-button.btn.btn-default(title="Zoom Out")
               i.glyphicon.glyphicon-minus
     #trash-bin.controls(title="Drag a node here to Archive it")
-      i.fa.fa-eye-slash
-      span#number-hidden 0
+      span#bring-all-nodes-to-view
+        i.fa.fa-eye-slash
+        span#number-hidden 0
   .data-tooltip-container
