--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -39,6 +39,10 @@
   stroke: @selected-color;
 }
 
+#bring-all-nodes-to-view {
+  cursor: pointer;
+}
+
 .node-title-body {
   // text-align: center;
   background: transparent;
