improved search and changed icons

--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -347,8 +347,14 @@ input[type="text"]:-ms-input-placeholder { /* Internet Explorer 10+ */
 }
 
 .search-title {
-  padding: 12px 16px;
-  font-size: 16pt;
+  display: block;
+  padding: 2px 5px 0;
+  background: rgba(0,0,0,0.01);
+  text-transform: uppercase;
+  border-bottom: 1px solid #eee;
+  border-top: 1px solid #eee;
+  color: #666;
+  // font-size: 16pt;
 }
 
 .modal-body {
