--- a/app/public/signup.jade
+++ b/app/public/signup.jade
@@ -12,7 +12,7 @@ html
     include profileheader
     .container.pad-top
       .col-sm-6.col-sm-offset-3
-        h1 Join Cograph
+        h1 Start connecting
         p  
           a(href="/auth/twitter")
             img(src="assets/images/sign-in-with-twitter.png")
@@ -38,5 +38,5 @@ html
         
         p
           | Already have an account? 
-          a(href='/login') Login
+          a(href='/login') Start Connecting
 
