--- a/app/public/header.jade
+++ b/app/public/header.jade
@@ -7,7 +7,7 @@ nav.navbar.navbar-default(role='navigation')
             span.icon-bar
             span.icon-bar
           a.navbar-brand(href='/')
-            img#brand-logo(src="assets/images/logo.svg")
+            img#brand-logo(src="assets/images/logo-black.png")
           
         span.navbar-doc-title
             span.form-group
@@ -30,9 +30,9 @@ nav.navbar.navbar-default(role='navigation')
         #gdocs-nav.collapse.navbar-collapse
           ul.nav.navbar-nav.navbar-right 
             if isAuthenticated
-              li
-                a(href="/new" target="_blank")
-                  i.fa.fa-edit
+              li(style="height:22px")
+                a(href="/new" target="_blank" title="new graph")
+                  img(src="assets/images/newgraph.png" height="32px" style="margin-top:-9px;")
               li.dropdown
                 a.dropdown-toggle(data-toggle='dropdown', href='')
                   | #{user.local.name}
