--- a/app/public/profileheader.jade
+++ b/app/public/profileheader.jade
@@ -7,13 +7,13 @@ nav.navbar.navbar-default(role='navigation')
           span.icon-bar
           span.icon-bar
         a.navbar-brand(href='/')
-          img#brand-logo(src="assets/images/logo.svg")
+          img#brand-logo(src="assets/images/logo-black.png")
       if isAuthenticated 
         #gdocs-nav.collapse.navbar-collapse
           ul.nav.navbar-nav.navbar-right
-            li
-              a(href="/new")
-                i.fa.fa-edit
+            li(style="height:22px")
+              a(href="/new" target="_blank" title="new graph")
+                img(src="assets/images/newgraph.png" height="32px" style="margin-top:-9px;")
             li.dropdown
               a.dropdown-toggle(data-toggle='dropdown', href='')
                 | #{user.local.name}
