--- a/app/public/index.jade
+++ b/app/public/index.jade
@@ -50,4 +50,6 @@ block content
       span#bring-all-nodes-to-view
         i.fa.fa-eye-slash
         span#number-hidden 0
+      span#dragging-message
+        | Drag here to Hide
   .data-tooltip-container
