--- a/app/templates/edit_form.html
+++ b/app/templates/edit_form.html
@@ -5,5 +5,5 @@
     Save
   </button>
   <button id="delete-button" class="btn btn-danger go-right" type="button">Delete</button>
-  <button id="archive-button" class="btn btn-danger" type="button">Archive</button>
+  <button id="archive-button" class="btn btn-danger" type="button">Hide</button>
 </form>
