--- a/app/public/index.jade
+++ b/app/public/index.jade
@@ -46,10 +46,13 @@ block content
               i.glyphicon.glyphicon-plus
             button#zoom-out-button.btn.btn-default(title="Zoom Out")
               i.glyphicon.glyphicon-minus
-    #trash-bin.controls(title="Drag a node here to Archive it")
+    #trash-bin.controls(title="Drag a node here to Hide it")
       span#bring-all-nodes-to-view
         i.fa.fa-eye-slash
         span#number-hidden 0
       span#dragging-message
         | Drag here to Hide
+      span#hover-message
+        span#show-all Show all
+        span#hide-all Hide all
   .data-tooltip-container
