fixed bug of saving/archiving not working

--- a/app/templates/details_box.html
+++ b/app/templates/details_box.html
@@ -3,7 +3,7 @@
     <div class="panel-heading">
       <h4 class="panel-title">
         <a data-toggle="collapse" data-parent="#details-container" href="#collapse-one">
-          Edit
+          <%= node.attributes.name %>
         </a>
         <div class="pull-right uptwo">
           <button type="button" class="close" aria-hidden="true">
@@ -18,8 +18,6 @@
         <div class="detail-controls">
           <% if (node.constructor.name === "NodeModel") {%>
             <button id="edit-node-button" class="btn btn-primary">Edit</button>
-            <button id="expand-node-button" class="btn btn-default">Expand</button>
-            <button id="archive-node-button" class="btn btn-warning">Archive</button>
           <% } else { %>
             <button id="edit-connection-button" class="btn btn-default">Edit</button>
             <button id="archive-connection-button" class="btn btn-warning">Archive</button>
