--- a/app/public/user-index.jade
+++ b/app/public/user-index.jade
@@ -60,81 +60,90 @@ head
     .container.main-content
       .row
         .col-md-12
+          h3 What is Cograph?
           h3.full-size
-            | Cographs are  &nbsp;
-            strong webs of ideas
-            |  &nbsp; that you can create, explore and publish.
-          center
-            a.btn.btn-primary.btn-lg.call-to-demo Insert Embedded demo
+            strong Cographs are webs of ideas that you can create, explore and publish.
+          br
+          h3 Why should I use graphs?
           h3.full-size
-            | These graphs are great for representing  &nbsp;
-            strong connected
-            |  &nbsp; information like  &nbsp;
-            strong networks
-            | ; people, ideas, communities.
+            strong Graphs are great for connected information. (Information wants to be a graph)
+          br
+          h3 Here are some popular Cographs
+          h3.full-size
+            strong embed here
+          br
       hr
-      h1.header-titles What can I do with Cograph?
+      h3.header-titles What can I do with Cograph?
       .row
-        .col-md-4.col-sm-6.benefit
+        .col-xs-12.col-md-4.benefit
           .benefit-ball
             i.flaticon-idea13
-          h3 Add
+          h3 
+            strong Add
           p Create and connect information across the web
 
-        .col-md-4.col-sm-6.benefit
+        .col-md-4.col-xs-12.benefit
           .benefit-ball
             i.flaticon-cell9
-          h3 Connect
+          h3 
+            strong Connect
           p Create connections between things and label connections
 
-        .col-md-4.col-sm-6.benefit
+        .col-md-4.col-xs-12.benefit
           .benefit-ball
             i.flaticon-teamwork
-          h3 Collaborate
+          h3 
+            strong Collaborate
           p Edit graphs in real time with others.
-
-        .col-md-4.col-sm-6.benefit
+      .row
+        .col-md-4.col-xs-12.benefit
           .benefit-ball
             i.flaticon-earth180
-          h3 Explore
+          h3 
+            strong Explore
           p Filter, search and tag your graphs or expand connections. 
 
-        .col-md-4.col-sm-6.benefit
+        .col-md-4.col-xs-12.benefit
           .benefit-ball
             i.flaticon-rating
-          h3 Share
+          h3 
+            strong Share
           p Share graphs to your favorite social media and decide who can contribute to them
 
-        .col-md-4.col-sm-6.benefit
+        .col-md-4.col-xs-12.benefit
           .benefit-ball
             i.flaticon-code26
-          h3 Embed
+          h3
+            strong Embed
           p Add graphs to your website or blog posts
 
-      h1.header-titles We're in Beta. Our Next Features are
+      h3.header-titles We're in Beta. Our Next Features are
       .row
-        .col-md-4.col-sm-6.benefit
+        .col-md-4.col-xs-12.benefit
           .benefit-ball
             i.flaticon-rocket60
-          h3 API
+          h3 
+            strong API
           p Post and get data to cograph
 
-        .col-md-4.col-sm-6.benefit
+        .col-md-4.col-xs-12.benefit
           .benefit-ball
             i.flaticon-cells1
-          h3 Intergraph
+          h3 
+            strong Intergraph
           p Connect between nodes across different graphs.
 
-        .col-md-4.col-sm-6.benefit
+        .col-md-4.col-xs-12.benefit
           .benefit-ball
             i.flaticon-circular152
-          h3 Faster access
+          h3 
+            strong Faster access
           p Browser extensions to make it faster to connect content
 
       hr
       .row
         .col-md-10.col-md-offset-1.text-center
-          h1 Inspired?
+          h3 Inspired?
           br
           p.sizable
             | We'd love to discuss ideas with you at &nbsp;
