--- a/app/public/signup.jade
+++ b/app/public/signup.jade
@@ -10,33 +10,33 @@ html
     base(href="/")
   body
     include profileheader
-    .container.pad-top
-      .col-sm-6.col-sm-offset-3
-        h1 Start connecting
-        p  
-          a(href="/auth/twitter")
-            img(src="assets/images/sign-in-with-twitter.png")
-        hr
+    .container-fluid.pad-top
+      .row
+        .col-md-6.col-md-offset-3.col-xs-12
+          h1 Start connecting
+          p  
+            a(href="/auth/twitter")
+              img(src="assets/images/sign-in-with-twitter.png")
+          hr
+            
+          // show any messages that come back with authentication
+          if message.length > 0 
+            .alert.alert-danger #{message}
+
+          // SIGNUP FORM 
+          form(action='/signup', method='post')
+            .form-group
+              label Username
+              input.form-control(type='text', name='name')
+            .form-group
+              label Email
+              input.form-control(type='email', name='email') 
+            .form-group
+              label Password
+              input.form-control(type='password', name='password')
+            button.btn.btn-warning.btn-lg(type='submit') Signup
+          hr
           
-        // show any messages that come back with authentication
-        if message.length > 0 
-          .alert.alert-danger #{message}
-
-        // SIGNUP FORM 
-        form(action='/signup', method='post')
-          .form-group
-            label Username
-            input.form-control(type='text', name='name')
-          .form-group
-            label Email
-            input.form-control(type='email', name='email') 
-          .form-group
-            label Password
-            input.form-control(type='password', name='password')
-          button.btn.btn-warning.btn-lg(type='submit') Signup
-        hr
-        
-        p
-          | Already have an account? 
-          a(href='/login') Start Connecting
-
+          p
+            | Already have an account? 
+            a(href='/login') Start Connecting
