--- a/app/public/login.jade
+++ b/app/public/login.jade
@@ -8,34 +8,35 @@ html
     link(href='/assets/stylesheets/gsdk-base.css', rel='stylesheet')
     link(href='/assets/stylesheets/custom.css', rel='stylesheet')  
     base(href="/")
-  body
+  body(style="background:url('/assets/images/bg.png')")
     include profileheader
-    .container.pad-top
-      .col-sm-6.col-sm-offset-3
-        h1
-          |  Login
-        p  
-          a(href="/auth/twitter")
-            img(src="assets/images/sign-in-with-twitter.png")
-        hr
-        // show any messages that come back with authentication
-        if message.length > 0 
-          .alert.alert-danger #{message}
+    .container-fluid.pad-top
+      .row
+        .col-md-6.col-md-offset-3.col-xs-12(style="background: white")
+          h3
+            strong Welcome Back!
+          br
+          p  
+            a(href="/auth/twitter")
+              img(src="assets/images/sign-in-with-twitter.png")
+          strong OR
+          hr
+          // show any messages that come back with authentication
+          if message.length > 0 
+            .alert.alert-danger #{message}
 
-        // LOGIN FORM 
-        form(action='/login', method='post')
-          .form-group
-            label Email
-            input.form-control(type='text', name='email')
-          .form-group
-            label Password
-            input.form-control(type='password', name='password')
-          button.btn.btn-warning.btn-lg(type='submit') Login
-        hr
-        p
-          | Need an account? 
-          a(href='/signup') Signup
-        p
-          | Or go 
-          a(href='/') home
-          | .
+          // LOGIN FORM 
+          form(action='/login', method='post')
+            .form-group
+              label Email
+              input.form-control(type='text', name='email')
+            .form-group
+              label Password
+              input.form-control(type='password', name='password')
+            button.btn.btn-default.btn-lg.float-right(type='submit') Login
+          p
+            | Need an account? 
+            a(href='/signup') Signup
+          p
+            | Or go 
+            a(href='/') home
