--- a/app/public/login.jade
+++ b/app/public/login.jade
@@ -33,7 +33,7 @@ html
             .form-group
               label Password
               input.form-control(type='password', name='password')
-            button.btn.btn-default.btn-lg.float-right(type='submit') Login
+            button.btn.btn-default.btn-lg.pull-right(type='submit') Login
           p
             | Need an account? 
             a(href='/signup') Signup
