--- a/app/templates/edit_form.html
+++ b/app/templates/edit_form.html
@@ -4,6 +4,6 @@
   <button id='save-node-connection-button' class="btn btn-default" type="submit">
     Save
   </button>
-  <button id="delete-button" class="btn btn-danger go-right" type="button">Delete</button>
+  <button id="delete-button" class="btn btn-danger pull-right" type="button">Delete</button>
   <button id="archive-button" class="btn btn-danger" type="button">Hide</button>
 </form>
