small qol changes

--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -437,6 +437,15 @@ input[type="text"]:-ms-input-placeholder { /* Internet Explorer 10+ */
   width: 15px;
 }
 
+#newgraph-icon {
+  height: 22px;
+
+  img {
+    height:32px;
+    margin-top:-9px;
+  }
+}
+
 #menu-title {
   position: relative;
   outline: none;
