less cleanup.. going to be a pain to merge but oh well

--- a/app/public/account.jade
+++ b/app/public/account.jade
@@ -5,8 +5,9 @@ head
   meta(charset='utf-8')
   link(href='/assets/libs/bootstrap/dist/css/bootstrap.min.css', rel='stylesheet')
   link(href='/assets/libs/fontawesome/css/font-awesome.min.css', rel='stylesheet')
-  link(href='/assets/stylesheets/gsdk-base.css', rel='stylesheet')
-  link(href='/assets/stylesheets/custom.css', rel='stylesheet')  
+  link(href='/assets/stylesheets/custom-bootstrap-theme.css', rel='stylesheet')
+  link(href='/assets/stylesheets/general.css', rel='stylesheet')  
+  link(href='/assets/stylesheets/nav.css', rel='stylesheet') 
   base(href="/")
   script(type='text/javascript', data-main="landing", src="/assets/libs/requirejs/require.js") //loads landing.js
   script.
