--- a/app/public/layout.jade
+++ b/app/public/layout.jade
@@ -12,8 +12,10 @@ html(lang="en")
     link(href='/assets/libs/fontawesome/css/font-awesome.min.css', rel='stylesheet')
     link(href='/assets/libs/targeted-atwho/dist/css/jquery.atwho.min.css', rel='stylesheet')
     link(href='/assets/stylesheets/typeahead.css', rel='stylesheet')
-    link(href='/assets/stylesheets/gsdk-base.css', rel='stylesheet')
-    link(href='/assets/stylesheets/custom.css', rel='stylesheet')  
+    link(href='/assets/stylesheets/custom-bootstrap-theme.css', rel='stylesheet')
+    link(href='/assets/stylesheets/general.css', rel='stylesheet')  
+    link(href='/assets/stylesheets/nav.css', rel='stylesheet')  
+    link(href='/assets/stylesheets/graph.css', rel='stylesheet')  
     link(href="/assets/libs/feedback-bot/src/feedback.css" rel='stylesheet')
   
     script(type='text/javascript', data-main="main", src="/assets/libs/requirejs/require.js") //loads main.js
