--- a/app/public/profile.jade
+++ b/app/public/profile.jade
@@ -5,8 +5,9 @@ head
   meta(charset='utf-8')
   link(href='/assets/libs/bootstrap/dist/css/bootstrap.min.css', rel='stylesheet')
   link(href='/assets/libs/fontawesome/css/font-awesome.min.css', rel='stylesheet')
-  link(href='/assets/stylesheets/gsdk-base.css', rel='stylesheet')
-  link(href='/assets/stylesheets/custom.css', rel='stylesheet')  
+  link(href='/assets/stylesheets/custom-bootstrap-theme.css', rel='stylesheet')
+  link(href='/assets/stylesheets/general.css', rel='stylesheet')  
+  link(href='/assets/stylesheets/nav.css', rel='stylesheet')  
   base(href="/")
   script(type='text/javascript', data-main="landing", src="/assets/libs/requirejs/require.js") //loads landing.js
   script.
@@ -14,7 +15,7 @@ head
 
   body
     include profileheader
-    .container
+    .container#profile-container
       .page-header.text-center
         h1
           if ownProfile
@@ -33,7 +34,6 @@ head
             .document-list
               for doc in docs
                 a.list-group-item(href="#{doc.createdBy}/document/#{doc.id}" target="_blank") #{doc.name}
-
       else
         .row
           .col-sm-12
