--- a/app/assets/stylesheets/graph.less
+++ b/app/assets/stylesheets/graph.less
@@ -11,14 +11,54 @@
 @data-tooltip-color: rgba(0,31,63,0.8);
 @controls-z-index: 1;
 @max-z: 99999999;
-
 @font: 'Varela Round', Helvetica, sans-serif;
-
 @bottom-margin: 60px;
 
-.node {
-  /*transition: opacity .5s ease-in-out;*/
+//
+// MIXINS
+//
+
+.wordBreak { // sensible word/line breaking
+  -ms-word-break: break-all;
+  word-break: break-all;
+  word-break: break-word;
+  -webkit-hyphens: auto;
+  -moz-hyphens: auto;
+  hyphens: auto;
 }
+
+//
+// PAGE
+//
+
+html, body {
+  overflow: hidden;
+  background: white;
+  height: 100%;
+}
+
+#main-container {
+  position: fixed;
+  height: 100%;
+  width: 100%;
+}
+
+svg {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+#graph {
+  width: 100%;
+  height: 100%;
+  right:0;
+  position: fixed;
+}
+
+/* NODE STYLES */
 
 .node.dim {
   opacity: 0.3;
@@ -48,23 +88,14 @@
 }
 
 .node-title-body {
-  // text-align: center;
   background: transparent;
-  color: #222;
-  -ms-word-break: break-all;
-  word-break: break-all;
-
-  word-break: break-word;
-
-  -webkit-hyphens: auto;
-  -moz-hyphens: auto;
-  hyphens: auto;
-
+  color: @text-color;
   height: auto;
+  .wordBreak;
 }
 
 .node-info-body, .connection-info-body {
-  background: @white;
+  background: white;
   display: none;
   color: gray;
   height: auto;
@@ -72,12 +103,12 @@
   line-height: normal;
 }
 
-.pad {
+.pad { //spans that pad the nodes
   padding: 3px 6px;
 }
 
 .node-title-body.shown {
-  background: @white;
+  background: white;
 }
 
 .node-info-body.shown, .connection-info-body.shown {
@@ -97,6 +128,29 @@
   text-anchor: middle;
   fill: @text-color;
 }
+
+.node-toolbar button {
+  padding:  2px 4px;
+  color: gray;
+  border: 0;
+  background: none;
+  outline: none;
+}
+
+.node-toolbar button:hover {
+  color: #333;
+}
+
+.node-toolbar button:active {
+  color: @selected-color;
+}
+
+.node-toolbar {
+  text-align: middle;
+  padding: 0 3px;
+}
+
+/* CONNECTION STYLES */
 
 .connection text {
   font: 12px sans-serif;
@@ -141,10 +195,6 @@
   opacity: 1;
 }
 
-.connection.selected text {
-  /*text-shadow: 0 2px 0 white, 2px 0 0 white, 0 -2px 0 white, -2px 0 0 white;*/
-}
-
 .connection.dim line {
   opacity: 0.1;
 }
@@ -168,69 +218,31 @@ line.hidden {
   stroke-width: 0;
 }
 
-html, body {
-  overflow: hidden;
-  background: #efefef;
-  height: 100%;
-  font-family: @font;
-}
-
 .node-title-body, .node-info-body, .connection-info-body, .connection-text text {
   font-family: @font;
 }
 
-#main-container {
-  position: fixed;
-  height: 100%;
-  width: 100%;
-}
-
-svg {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-
-#graph {
-  width: 100%;
-  height: 100%;
-  right:0;
-  position: fixed;
-}
+//
+// Other
+//
 
 .uptwo {
   margin-top: -15px;
 }
 
 input[type="text"]::-webkit-input-placeholder { /* WebKit browsers */
-    color:    #999;
+    color: #999;
 }
 input[type="text"]:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
-    color:    #999;
-    opacity:  1;
+  color: #999;
+  opacity: 1;
 }
 input[type="text"]::-moz-placeholder { /* Mozilla Firefox 19+ */
-    color:    #999;
-    opacity:  1;
+  color: #999;
+  opacity: 1;
 }
 input[type="text"]:-ms-input-placeholder { /* Internet Explorer 10+ */
-    color:    #999;
-}
-
-#sidebar {
-  position: absolute;
-  left: 0;
-  top: 0;
-  height: 100%;
-  width: 0;
-  background: darken(#284552,10%);
-  overflow-y: auto;
-}
-
-#sidebar-toggle {
-  margin: 10px 0 0 0;
+  color: #999;
 }
 
 #dragging-message, #hide-all, #show-all {
@@ -243,6 +255,7 @@ input[type="text"]:-ms-input-placeholder { /* Internet Explorer 10+ */
 #hide-all {
   margin-left: 10px;
 }
+
 #hide-all:hover, #show-all:hover {
   cursor: pointer;
   color: @selected-color;
@@ -272,11 +285,10 @@ input[type="text"]:-ms-input-placeholder { /* Internet Explorer 10+ */
   position: absolute;
   bottom: @bottom-margin;
   left: 10px;
-  padding-top:12px;
+  padding-top: 12px;
   text-align: center;
   border: 4px dashed lightgray;
   border-radius: 0px;
-
 
   #number-hidden {
     font-size: 20px;
@@ -284,7 +296,6 @@ input[type="text"]:-ms-input-placeholder { /* Internet Explorer 10+ */
     vertical-align: middle;
   }
 }
-
 
 #trash-bin.selected {
   border-color:@selected-color;
@@ -377,10 +388,6 @@ input[type="text"]:-ms-input-placeholder { /* Internet Explorer 10+ */
   margin: 2px 0px;
 }
 
-.main-nav {
-  padding: 0;
-  border: 0;
-}
 
 .search-title {
   display: block;
@@ -395,24 +402,6 @@ input[type="text"]:-ms-input-placeholder { /* Internet Explorer 10+ */
 .modal-body {
   max-height: 600px; // #TODO make this relative to the window height.
   overflow-y: scroll;
-}
-
-#brand-logo {
-  height: 30px;
-  margin-top: -7px;
-  margin-right: 10px;
-  margin-left: 10px;
-}
-
-.navbar-brand {
-  z-index: 999;
-  display: block;
-  pointer-events: all;
-  cursor: pointer;
-}
-
-.panel {
-  border: 0;
 }
 
 .navbar-doc-title {
@@ -433,46 +422,16 @@ input[type="text"]:-ms-input-placeholder { /* Internet Explorer 10+ */
   width: 15px;
 }
 
-#newgraph-icon {
-  height: 22px;
-
-  img {
-    height:32px;
-    margin-top:-9px;
-  }
-}
-
-#menu-title {
-  position: relative;
-  outline: none;
-  margin: 0 10px;
-  background: transparent;
-  color: black;
-  border: 0;
-  cursor: pointer;
-  padding: 6px;
-}
-
-#menu-title:focus {
-  cursor: text;
-}
-
 .network-share-button {
   margin-right:auto;
   margin-left:auto;
-}
-
-#phantom-share{
-  position: relative;
-  bottom: 50px;
-  right: 67px;
 }
 
 .loading-container {
   width: 100%;
   height: 100%;
   z-index: @max-z;
-  background-color: rgba(0,0,0,0.4);
+  background-color: rgba(0,0,0,0.2);
   position: absolute;
   top: 0;
   left: 0;
@@ -491,107 +450,32 @@ input[type="text"]:-ms-input-placeholder { /* Internet Explorer 10+ */
   }
 }
 
-// Overriding Bootstrap defaults
-
-.btn {
-  outline: none !important;
-  border-radius: 0 !important;
-}
-
-.btn-primary {
-  background: lighten(#284552,10%);
-  border: 1px solid lighten(#284552,10%);
-}
-
-.btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active, .open .dropdown-toggle.btn-primary {
-  border: 1px solid lighten(#284552,12%);
-  background: lighten(#284552,12%);;
-  color: white;
-}
-
-.navbar {
-  margin-bottom: 0;
-  background: rgba(0,0,0,0.02);
-  border: 0;
-  border-radius: 0;
-}
-
-.panel-body {
-  padding: 10px 15px;
-}
-
-.form-control {
-  border-radius: 0 !important;
-}
 
 // Bootstrap-colorpalette
 
 .bootstrap-colorpalette {
-    padding: 10px 0 10px 0;
-    white-space: normal;
-    line-height:1;
+  padding: 10px 0 10px 0;
+  white-space: normal;
+  line-height:1;
 }
 
 .bootstrap-colorpalette div {
-    line-height:0;
+  line-height:0;
 }
 
 .bootstrap-colorpalette .btn-color {
-    width: 30px;
-    height: 30px;
-    border: 1px solid #efefef;
-    margin: 3px;
-    padding: 0;
+  width: 30px;
+  height: 30px;
+  border: 1px solid #efefef;
+  margin: 3px;
+  padding: 0;
 }
 
 .bootstrap-colorpalette .btn-color:hover {
-    border: 1px solid #000;
+  border: 1px solid #000;
 }
 
-.node-toolbar button {
-  padding:  2px 4px;
-  color: gray;
-  border: 0;
-  background: none;
-  outline: none;
-}
-
-.node-toolbar button:hover {
-  color: #333;
-}
-
-.node-toolbar button:active {
-  color: @selected-color;
-}
-
-.node-toolbar {
-  text-align: middle;
-  padding: 0 3px;
-}
-
-// Node Adder
-
-.cf:before,
-.cf:after {
-    content: " "; /* 1 */
-    display: table; /* 2 */
-}
-
-.cf:after {
-    clear: both;
-}
-
-/**
- * For IE 6/7 only
- * Include this rule to trigger hasLayout and contain floats.
- */
-.cf {
-    *zoom: 1;
-}
-
-body {
-    background: white;
-}
+// ADDER
 
 #add {
   font-size: 15pt;
@@ -691,11 +575,6 @@ body {
   float: left;
 }
 
-.panel-heading, .panel-body {
-  padding-left: 0;
-  padding-right: 0;
-}
-
 #add-toolbar-right {
   float:right;
 }
@@ -735,11 +614,17 @@ body {
   background: transparent;
 }
 
+// end
+
+.panel-heading, .panel-body {
+  padding-left: 0;
+  padding-right: 0;
+}
+
 /* LOADER */
 .spinner {
   width: 40px;
   height: 40px;
-
   position: relative;
   margin: 100px auto;
 }
@@ -783,19 +668,25 @@ body {
   }
 }
 
-@media (max-width: 700px) {
+// ADAPT TO DIFFERENT SCREENS
+
+@media (max-width: 700px) { // small
   .feedback-btn {
     display: none;
   }
+
   #add {
     width: 100%;
   }
+
   #menu-title {
     width: 90px;
   }
+
   .navbar-form {
     padding: 0;
   }
+
   .toolbar.right {
     right: 0px;
   }
