--- a/app/public/login.jade
+++ b/app/public/login.jade
@@ -5,10 +5,12 @@ html
     link(rel='stylesheet', href='//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css')
     link(href='/assets/libs/bootstrap/dist/css/bootstrap.min.css', rel='stylesheet')
     link(href='/assets/libs/fontawesome/css/font-awesome.min.css', rel='stylesheet')
-    link(href='/assets/stylesheets/gsdk-base.css', rel='stylesheet')
-    link(href='/assets/stylesheets/custom.css', rel='stylesheet')  
+    link(href='/assets/stylesheets/custom-bootstrap-theme.css', rel='stylesheet')
+    link(href='/assets/stylesheets/general.css', rel='stylesheet')
+    link(href='/assets/stylesheets/nav.css', rel='stylesheet')
+    link(href='/assets/stylesheets/login.css', rel='stylesheet')        
     base(href="/")
-  body(style="background:url('/assets/images/bg.png')")
+  body
     include profileheader
     .container-fluid.pad-top
       .row
